--- a/Pyspark/UDF_code.ipynb
+++ b/Pyspark/UDF_code.ipynb
@@ -38,45 +38,60 @@
    "source": [
     "# Advanced Pyspark Tutorial - UDFs\n",
     "# UDFs are user-defined functions that can be used in Spark SQL and DataFrames.\n",
-    "# https://www.kaggle.com/code/tientd95/advanced-pyspark-for-exploratory-data-analysis/data (data)"
+    "# https://www.kaggle.com/code/tientd95/advanced-pyspark-for-exploratory-data-analysis/data (data)\n",
+    "\n",
+    "# https://www.bmc.com/blogs/how-to-write-spark-udf-python/ (udf)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "b17f4cdb",
+   "cell_type": "markdown",
+   "id": "a64c5cb9",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import os\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import pyspark\n",
-    "import pyspark.sql.functions as F\n",
-    "from pyspark.sql.types import DoubleType, StringType, ArrayType\n",
-    "\n",
-    "from pyspark import SparkConf, SparkContext\n",
-    "from pyspark.sql import SparkSession, SQLContext\n",
-    "\n",
-    "from pyspark.sql.types import *\n",
-    "import pyspark.sql.functions as F\n",
-    "from pyspark.sql.functions import udf, col\n",
-    "\n",
-    "from pyspark.ml.regression import LinearRegression\n",
-    "from pyspark.mllib.evaluation import RegressionMetrics\n",
-    "\n",
-    "from pyspark.ml.tuning import ParamGridBuilder, CrossValidator, CrossValidatorModel\n",
-    "from pyspark.ml.feature import VectorAssembler, StandardScaler\n",
-    "from pyspark.ml.evaluation import RegressionEvaluator"
+    "## Code"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a64c5cb9",
+   "id": "a6732863",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pyspark\n",
+    "from pyspark import SQLContext\n",
+    "from pyspark.sql.types import StructType, StructField, IntegerType, FloatType, StringType\n",
+    "from pyspark.sql.functions import udf\n",
+    "from pyspark.sql import Row\n",
+    "conf = pyspark.SparkConf() \n",
+    "sc = pyspark.SparkContext.getOrCreate(conf=conf)\n",
+    "spark = SQLContext(sc)\n",
+    "schema = StructType([\n",
+    "StructField(\"sales\", FloatType(),True),    \n",
+    "StructField(\"employee\", StringType(),True),\n",
+    "StructField(\"ID\", IntegerType(),True)\n",
+    "])\n",
+    "data = [[ 10.2, \"Fred\",123]]\n",
+    "df = spark.createDataFrame(data,schema=schema)\n",
+    "colsInt = udf(lambda z: toInt(z), IntegerType())\n",
+    "spark.udf.register(\"colsInt\", colsInt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d5c75aa2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def toInt(s):\n",
+    "    if isinstance(s, str) == True:\n",
+    "        st = [str(ord(i)) for i in s]\n",
+    "        return(int(''.join(st)))\n",
+    "    else:\n",
+    "        return Null\n",
+    "df2 = df.withColumn( 'semployee',colsInt('employee'))"
+   ]
   }
  ],
  "metadata": {
