--- a/Pyspark/UDF_code.ipynb
+++ b/Pyspark/UDF_code.ipynb
@@ -40,7 +40,9 @@
     "# UDFs are user-defined functions that can be used in Spark SQL and DataFrames.\n",
     "# https://www.kaggle.com/code/tientd95/advanced-pyspark-for-exploratory-data-analysis/data (data)\n",
     "\n",
-    "# https://www.bmc.com/blogs/how-to-write-spark-udf-python/ (udf)"
+    "# https://www.bmc.com/blogs/how-to-write-spark-udf-python/ (udf)\n",
+    "\n",
+    "# Also Refer: https://www.geeksforgeeks.org/how-to-write-spark-udf-user-defined-functions-in-python/ (udf)"
    ]
   },
   {
