--- a/Pyspark/UDF_code.ipynb
+++ b/Pyspark/UDF_code.ipynb
@@ -42,7 +42,8 @@
     "\n",
     "# https://www.bmc.com/blogs/how-to-write-spark-udf-python/ (udf)\n",
     "\n",
-    "# Also Refer: https://www.geeksforgeeks.org/how-to-write-spark-udf-user-defined-functions-in-python/ (udf)"
+    "# Also Refer: https://www.geeksforgeeks.org/how-to-write-spark-udf-user-defined-functions-in-python/ (udf)\n",
+    "# https://docs.databricks.com/spark/latest/spark-sql/udf-python.html (udf)"
    ]
   },
   {
